overflow bug fix attemp #3

--- a/src/index.css
+++ b/src/index.css
@@ -28,5 +28,5 @@
 }
 
 body {
-  @apply overflow-hidden h-screen
+  @apply overflow-x-hidden h-screen
 }
